# wedding-planner

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
api/: .env.example  Cargo.toml
api/src/: main.rs
api/src/config/: mod.rs
api/src/handlers/: mod.rs
api/src/middleware/: mod.rs
api/src/models/: mod.rs
api/src/routes/: mod.rs
api/src/services/: mod.rs
crawler/src/: main.rs
mockup/: App.vue  index.html  package-lock.json  package.json  router.ts
mockup/components/: SidebarNav.vue
mockup/views/: BudgetView.vue  FoodBeveragesView.vue  GuestListView.vue  NotesView.vue  RentalsView.vue  SeatingPlanView.vue  TodoListView.vue  VendorsView.vue  VenueView.vue
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/pages/: HomePage.vue  LoginPage.vue
web/src/router/: index.ts
web/src/stores/: auth.ts
