[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework (like Go's gin/echo, or PHP's Laravel routing)
actix-web = "4"

# Serialization (like Go's encoding/json, but using derive macros)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (the engine powering async/await, like Go's goroutine scheduler)
tokio = { version = "1", features = ["full"] }

# Load environment variables from .env files (like Go's godotenv)
dotenvy = "0.15"

# Structured logging (like Go's slog or zerolog)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
